fixing horizontal scroll on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -34,6 +34,8 @@ $secondary: #FF7B7B;
 
 html {
   scroll-behavior: smooth;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 body {
